[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { version = "0.4.1", features = ["collector", "time"] }
tokio = { version = "1.21.2", features = ["full"] }
env_logger = "0.9.3"
log = "0.4.17"
